Java compiles now, spring boot need to be configured